force-app/main/default/objects/Financial_Projection__c/Financial_Projection__c.object-meta.xml
<CustomObject>
    <description>Revenue model per site

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Financial Projection</label>
    <nameField>
        <displayFormat>FP-{00000}</displayFormat>
        <label>Financial Projection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Projections</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>