force-app/main/default/objects/Financial_Projection__c/fields/Breakeven_Month__c.field-meta.xml
<CustomField>
    <fullName>Breakeven_Month__c</fullName>
    <description>Month number from store opening at which cumulative profit exceeds capex; set by Agentforce 

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Breakeven Month</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>