force-app/main/default/objects/Financial_Projection__c/fields/Capex_Estimate__c.field-meta.xml
<CustomField>
    <fullName>Capex_Estimate__c</fullName>
    <description>Total capital expenditure estimate in INR for store build-out 

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Capex Estimate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>