force-app/main/default/objects/Financial_Projection__c/fields/Expected_Revenue_Yr1__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue_Yr1__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <inlineHelpText>Projected annual revenue in INR for Year 1; generated by Agentforce financial model</inlineHelpText>
    <label>Expected Revenue (Yr1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>