force-app/main/default/objects/Financial_Projection__c/fields/Expected_Revenue_Yr2__c.field-meta.xml
<CustomField>
    <fullName>Expected_Revenue_Yr2__c</fullName>
    <description>Projected annual revenue for Year 2 

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Expected Revenue (Yr2)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>