force-app/main/default/objects/Financial_Projection__c/fields/Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>Generated_Date__c</fullName>
    <description>Timestamp of projection generation 

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Generated Date</label>
    <type>DateTime</type>
</CustomField>