force-app/main/default/objects/Financial_Projection__c/fields/NPV__c.field-meta.xml
<CustomField>
    <fullName>NPV__c</fullName>
    <description>3-year NPV computed by Agentforce using org-level discount rate from Custom Metadata 

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Net Present Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>