force-app/main/default/objects/Financial_Projection__c/fields/Opex_Estimate_Yr1__c.field-meta.xml
<CustomField>
    <fullName>Opex_Estimate_Yr1__c</fullName>
    <description>Operating expenditure estimate for Year 1 including rent, staff, utilities 

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Opex Estimate (Yr1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>