force-app/main/default/objects/Financial_Projection__c/fields/Payback_Period_Yrs__c.field-meta.xml
<CustomField>
    <fullName>Payback_Period_Yrs__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <formula>IF(
   Expected_Revenue_Yr1__c -  Opex_Estimate_Yr1__c &gt; 0,
  Capex_Estimate__c / ( Expected_Revenue_Yr1__c -  Opex_Estimate_Yr1__c),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payback Period (Yrs)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>