force-app/main/default/objects/Financial_Projection__c/fields/Potential_Site__c.field-meta.xml
<CustomField>
    <fullName>Potential_Site__c</fullName>
    <description>Master-detail to Potential Site 

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Potential Site</label>
    <referenceTo>Potential_Site__c</referenceTo>
    <relationshipLabel>Financial Projections</relationshipLabel>
    <relationshipName>Financial_Projections</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>