force-app/main/default/objects/Financial_Projection__c/fields/Projection_Model__c.field-meta.xml
<CustomField>
    <fullName>Projection_Model__c</fullName>
    <description>Identifier of the Agentforce financial model version used 

Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <label>Projection Model</label>
    <length>100</length>
    <type>Text</type>
</CustomField>