force-app/main/default/objects/Financial_Projection__c/fields/ROI_Percent__c.field-meta.xml
<CustomField>
    <fullName>ROI_Percent__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <formula>((Expected_Revenue_Yr1__c + Expected_Revenue_Yr2__c + Expected_Revenue_Yr3__c) - (Capex_Estimate__c + Opex_Estimate_Yr1__c * 3)) /Capex_Estimate__c* 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ROI Percent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>