force-app/main/default/objects/Financial_Projection__c/fields/Viability_Status__c.field-meta.xml
<CustomField>
    <fullName>Viability_Status__c</fullName>
    <description>Created for Agentforce Hackathon 2026 Retail &amp; Consumer Goods Use Case (Kilimanjaro Force Team)</description>
    <formula>IF(
   Payback_Period_Yrs__c &lt;= 2,
  &quot;High Viability&quot;,
  IF(
     Payback_Period_Yrs__c &lt;= 3.5,
    &quot;Viable&quot;,
    &quot;Review Required&quot;
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Viability Status</label>
    <type>Text</type>
</CustomField>