force-app/main/default/objects/Financial_Projection__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Expected_Revenue_Yr1__c</columns>
    <columns>NPV__c</columns>
    <columns>Payback_Period_Yrs__c</columns>
    <columns>Potential_Site__c</columns>
    <columns>ROI_Percent__c</columns>
    <columns>Viability_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>